added search functionality for courses

--- a/Projects/Basic/Course-Selling Website/index.html
+++ b/Projects/Basic/Course-Selling Website/index.html
@@ -44,47 +44,48 @@
     <section class="courses" id="courses">
         <div class="courses-text">
             <h2>Discover our in-demand courses</h2>
+            <input type="search" name="" id="course-search-bar">
         </div>
         <div class="cards-group">
             <div class="card">
                 <img src="images/DSA.webp" alt="">
                 <h3>DSA <em>₹3999</em> </h3>
-                <p>Data Structure & Algorithms- detailed concepts discussion and understanding.</p>
+                <p class="course-descp">Data Structure & Algorithms (DSA)- detailed concepts discussion and understanding.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
             </div>
             <div class="card">
                 <img src="images/c.webp" alt="">
                 <h3>C Programming <em>₹2999</em> </h3>
-                <p>Master C programming from scratch to advanced topics with strong fundamentals.</p>
+                <p class="course-descp">Master C programming from scratch to advanced topics with strong fundamentals.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
             </div>
             <div class="card">
                 <img src="images/cpp.webp" alt="">
                 <h3>C++ Concepts <em>₹1499</em> </h3>
-                <p>Learn the concepts of Object Oriented Programming and get skilled.</p>
+                <p class="course-descp">Learn the concepts of Object Oriented Programming and get skilled.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
             </div>
             <div class="card">
                 <img src="images/java.webp" alt="">
                 <h3>Java <em>₹1299</em> </h3>
-                <p>A beginner friendly course to get started with Java & object oriented programming.</p>
+                <p class="course-descp">A beginner friendly course to get started with Java & object oriented programming.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
             </div>
             <div class="card">
                 <img src="images/full stack.webp" alt="">
                 <h3>Full Stack Web Dev <em>₹1799</em> </h3>
-                <p> Start building modern websites using MERN and get hand on experienced with projects.</p>
+                <p class="course-descp"> Start building modern websites using MERN and get hand on experienced with projects.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
             </div>
             <div class="card">
                 <img src="images/interview.webp" alt="">
                 <h3>Interview Guide <em>₹1000</em> </h3>
-                <p>Learn the basic tips and skills required to clear any interview and get placed easily.</p>
+                <p class="course-descp">Learn the basic tips and skills required to clear any interview and get placed easily.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
             </div>
@@ -197,5 +198,6 @@
         </div>
     </footer>
     
+    <script src="script/script.js"></script>
 </body>
 </html>
