add top search bar functionality

--- a/Projects/Basic/Course-Selling Website/index.html
+++ b/Projects/Basic/Course-Selling Website/index.html
@@ -25,6 +25,8 @@
             <a class="btn signup" href="#"><span>Sign up</span></a>
         </div> 
     </header>
+    <div class="main-search-area hide">
+    </div>
     <section class="banner">
         <div class="banner-text">
             <h2>Learn the latest digital skills for tommorow's jobs</h2>
@@ -57,6 +59,7 @@
             <div class="card">
                 <img src="images/c.webp" alt="">
                 <h3>C Programming <em>₹2999</em> </h3>
+                <div class="tag" style="display: none;">this is not dispalyed. i can use this to enhance search functionality by adding tags here</div>
                 <p class="course-descp">Master C programming from scratch to advanced topics with strong fundamentals.</p>
                 <a href="#"><button class="buy-now">Buy Now</button></a>
                 <a class="add-to-cart" href="#">Add to cart</a>
